Initial Commit. MapStruct Added

--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,10 @@ plugins {
     id 'java'
     id 'war'
     id "org.springframework.boot" version "2.0.6.RELEASE"
+    id 'net.ltgt.apt' version '0.15'
 }
-
-group 'com.agroculture'
+apply plugin: 'net.ltgt.apt-idea'
+group 'com.infopulse'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -50,7 +51,7 @@ dependencies {
     compile 'org.projectlombok:lombok:1.18.2'
     compile 'org.postgresql:postgresql:42.2.5'
     compile 'javax.xml:jaxb-api:2.1'
-    compile group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.2.0.Final'
+    compile 'org.mapstruct:mapstruct:1.2.0.Final'
     compile 'org.slf4j:slf4j-simple:1.7.7'
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.2.RELEASE'
     compile group: 'org.springframework.hateoas', name: 'spring-hateoas', version: '0.25.0.RELEASE'
@@ -61,6 +62,8 @@ dependencies {
     testCompile 'org.springframework.boot:spring-boot-starter-test:2.0.6.RELEASE'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.0'
     compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.13'
+    runtime group: 'org.liquibase', name: 'liquibase-groovy-dsl', version: '2.0.2'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final'
 }
 
 bootJar {
