--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: postgres
-    password: Tsunami9
+    password: 3351425
     driverClassName: org.postgresql.Driver
     driverDialect: org.hibernate.dialect.PostgreSQL82Dialect
     url: jdbc:postgresql://localhost/chat_db
